# GaspardEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json
.github/workflows/: build.yml  c-cpp.yml  cmake-multi-platform.yml
Logs/: ExampleLog.txt
Resources/: default.frag
include/: pch.h
include/Game/: GameLogic.h
src/: main.cpp
src/Game/: GameLogic.cpp
